fixes the alignment of dropdowns

--- a/user/src/Components/Style.css
+++ b/user/src/Components/Style.css
@@ -272,11 +272,13 @@ button:hover {
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s ease;
+    text-align: center;
   }
   
   /* Hover effect for dropdown items */
   .dropdown-item:hover {
-    background-color: #f1f1f1;
+    background-color: rgba(190, 188, 188,0.5);
+
   }
   .dropdown-menu {
   display: none; /* Hide by default */
